tests/tests2/61_undefined_enum.expect
61_undefined_enum.c:1: error: unknown struct/union/enum
