tests/tests2/61_undefined_enum.c
enum rgb c = 42;
